# Scraper

./: .gitignore  DEPLOYMENT.md  rewire.md
backend/: .gitignore  action_api.py  ai_agent.py  channel_decision.py  database.py  debug_extractor.py  debug_headless.py  enrichment.py  main.py  models.py  orchestrator.py  processor.py  pyproject.toml  scraper.py  search.txt  sender.py  telegram_bot.py  telegram_queue.py  utils.py
backend/config/: niches.json
backend/tests/: test_core.py
deploy/: outreach-api.service  outreach-bot.service  outreach-listener.service
whatsapp-service/: .gitignore  index.js  package.json  pnpm-lock.yaml
