[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.128.0",
    "google-genai>=1.62.0",
    "google-generativeai>=0.8.6",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "playwright-stealth>=2.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "ratelimit>=2.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
